fixed profile image linking, modified overflow div height

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,11 +114,11 @@ input[type=email] {
 }
 
 .feed-div {
-  height: 79%;
+  height: 100%;
 }
 
 .feed {
-  height: 100%;
+  height: 76%;
   overflow-y: auto;
   border-radius: .25rem;
 }
@@ -221,7 +221,7 @@ body {
 /* styling for settings ------------------------------------- */
 
 #settings-div {
-  height: 86%;
+  height: 83%;
   overflow-y: auto;
   border-radius: .25rem;
 }
